GH-3843 bug fix
Signed-off-by: Håvard Ottestad <hmottestad@gmail.com>